Fixed some layout issues, reformatted code

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 #rose
 {
   width:21%;
+  vertical-align:middle;
 }
 .iconclip
 {
@@ -21,7 +22,7 @@ body
   width:100%;
   height:40%;
   left:0%;
-  background-color:#E5D6FC;
+  background-color:#A482D3;
   box-shadow: 0px 0px 25px #2E0765;
   top:0%;
 
@@ -88,7 +89,7 @@ a
   margin-right:20px;
   font-size:20px;
   text-decoration: none;
-  color:#000675;
+  color:#FFFEEE;
 }
 a:hover
 {
@@ -108,7 +109,6 @@ h1
   color:#2E0765;
   font-weight: 200;
   padding-top:5%;
-  float:left;
   font-family:"Lato";
 }
 #homelabel:hover
